src/objects/Prequalification__c.object
<CustomObject>
    <fields>
        <fullName>Bankruptcy_dismissed_in_the_last_12_mo__c</fullName>
        <label>Bankruptcy dismissed in the last 12 mo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criteria_Decision__c</fullName>
        <formula>if ( ISPICKVAL(Ec_Company_in_business_6_months__c , &quot;&quot;), &quot;&quot;, 
If ( ISPICKVAL( Ec_Company_in_business_6_months__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, 
If ( ISPICKVAL( EC_Processing_2_500_per_month__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, 
If ( ISPICKVAL( EC_4_consecutive_months_of_processing__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, 
If ( ISPICKVAL( EC_12_separate_daily_deposits_per_month__c  , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, 
If ( ISPICKVAL(  Is_the_business_closed_for_renovations__c , &quot;Yes&quot;), &quot;INELIGIBLE - STOP RIGHT NOW&quot;, 
If ( ISPICKVAL( EC_Business_is_currently_for_sale__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, &quot;Eligible Criteria Met&quot; )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Bankrupt__c</fullName>
        <label>Currently Bankrupt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_in_Credit_Consumer_Counseling__c</fullName>
        <label>Currently in Credit Consumer Counseling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_12_separate_daily_deposits_per_month__c</fullName>
        <label>&lt; 12 separate daily deposits per month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_4_consecutive_months_of_processing__c</fullName>
        <label>&lt; 4 consecutive months of processing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_Business_is_currently_for_sale__c</fullName>
        <label>Business is currently for sale</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_Processing_2_500_per_month__c</fullName>
        <label>Processing &lt; $2,500 per month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ec_Company_in_business_6_months__c</fullName>
        <label>Company in business &lt; 6 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_business_closed_for_renovations__c</fullName>
        <label>Is the business closed for renovations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_has_current_Pay_Day_Loan__c</fullName>
        <label>Merchant has current &quot;Pay Day Loan&quot;</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mortgage_payment_60_days_past_due__c</fullName>
        <label>Mortgage payment &gt;= 60 days past due</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Prequalification</relationshipLabel>
        <relationshipName>Prequalification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PQ_Stage__c</fullName>
        <description>Where is the PQ in the process?</description>
        <label>PQ Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned to Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQ FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQ PASSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to PQ Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recently_Filed_for_Bankruptcy__c</fullName>
        <label>Recently Filed for Bankruptcy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prequalification</label>
    <listViews>
        <fullName>Pre_Qual_IN_PROGRESS_Queue</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>NAME</columns>
        <columns>Criteria_Decision__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Pre-Qual IN PROGRESS Queue</label>
        <queue>PreQualINPROGRESSQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pre_Qual_PASSED</fullName>
        <columns>NAME</columns>
        <columns>Criteria_Decision__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Pre-Qual PASSED</label>
        <queue>PreQualPASSED</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PQ-{0000000000}</displayFormat>
        <label>Pre-Qual Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prequalification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>